--- a/Dojo_Sweeper/Dojo_Sweeper.css
+++ b/Dojo_Sweeper/Dojo_Sweeper.css
@@ -5,14 +5,25 @@
     padding: 0;
     font-family: 'Press Start 2P', monospace;
 }
-    
+
+body{
+    background-color: #999;
+}
+
+#container{
+    background-color: rgb(13, 142, 136);
+    width: 60%;
+    padding: 5vw;
+    margin: 5vw auto;
+}
+
 h2 {
     text-align: center;
     margin: 20px 0;
 }
-    
+
 #the-dojo {
-    width: 320px;
+    width: 50vw;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -20,8 +31,8 @@ h2 {
     
 .tatami {
     background-color: wheat;
-    height: 32px;
-    width: 32px;
+    height: 5vw;
+    width: 5vw;
     border: 2px solid #ccc;
     border-right: 2px solid #999;
     border-bottom: 2px solid #999;
@@ -31,4 +42,18 @@ h2 {
     border: 2px solid #999;
     border-right: 2px solid #ccc;
     border-bottom: 2px solid #ccc;
+}
+
+.red{
+    width: 70%;
+    height: 70%;
+    border-radius: 50%;
+    background-color: red;
+    margin: auto;
+}
+
+.restart{
+    margin-top: 2vw;
+    width: 10vw;
+    height: 3vw;
 }
